# Fine-grained-Recognition-with-ViT

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci-cd.yml
core/: data_prepocess.ipynb  image_data.csv
data/CUB_200_2011/: README  bounding_boxes.txt  classes.txt  images.txt  train_test_split.txt
helpers/: model_definition.py  model_process_handler.py
k8s/helm/alloy/: values.yaml
k8s/helm/alloy/alloy/: Chart.yaml  values.yaml
k8s/helm/api/: Chart.yaml  NOTES.txt  values.yaml
k8s/helm/api/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
k8s/helm/frontend/: .helmignore  Chart.yaml  NOTES.txt  values.yaml
k8s/helm/frontend/templates/: deployment.yaml  ingress.yaml  service.yaml
k8s/helm/grafana/: values.yaml
k8s/helm/grafana/grafana/: values.yaml
k8s/helm/grafana/grafana/dashboards/: custom-dashboard.json
k8s/helm/loki/loki/: values.yaml
k8s/helm/loki/loki/charts/grafana-agent-operator/templates/: _helpers.tpl
k8s/helm/loki/loki/charts/minio/templates/: console-ingress.yaml  ingress.yaml
k8s/helm/loki/loki/charts/rollout-operator/templates/: no-downscale-webhook.yaml  pod-eviction-webhook.yaml  prepare-downscale-webhook.yaml  role.yaml  webhook-clusterrole-binding.yaml  webhook-clusterrole.yaml  webhook-role-binding.yaml  webhook-role.yaml  zone-aware-pod-disruption-budget-validating-webhook.yaml
k8s/helm/loki/loki/docs/examples/enterprise/: README.md
k8s/helm/mlflow/: Chart.yaml  values.yaml
k8s/helm/mlflow/templates/: deployment.yaml  service.yaml
k8s/helm/serving/: README.md  values.yaml
k8s/helm/serving/templates/: inference-service.yaml
k8s/helm/tempo/: Chart.yaml  NOTES.txt  values.yaml
k8s/helm/tempo/templates/: config-map.yaml  service-headless.yaml  service.yaml  statefulset.yaml
k8s/helm/tempo/tempo/templates/: service.yaml
k8s/manifests/: alloy.yaml  api-deployment.yaml  api-secret-example.yaml  grafana-secret-example.yaml  loki.yaml  tempo.yaml
models/bird_classification/config/: config.properties
notebooks/: birds_classification.ipynb  data_prepocess.ipynb  image_data_test.csv  image_data_train.csv
scripts/: build_torchserve_file.sh  create_gcp_infra.sh  create_mar.sh
services/api/: Dockerfile  pyproject.toml
services/api/k8s/: fastapi-deployment.yaml  hpa.yaml
services/api/src/api/: Dockerfile.api  __init__.py
services/frontend/: Dockerfile  pyproject.toml
services/frontend/.streamlit/: config.toml
services/frontend/src/frontend/: app.py
services/mlflow/: Dockerfile  cloudbuild.yaml
services/nginx/: nginx.conf
services/serving/: README.md  pyproject.toml
services/serving/k8s/: inference-service.yaml
services/serving/src/serving/: Dockerfile  Dockerfile.kserve  __init__.py  postprocess.py  preprocess.py
setup/: create_infra.sh  db.py
src/mlflow/: Dockerfile
src/nginx/: nginx.conf
src/serving/: Dockerfile  main.py  postprocess.py  pyproject.toml
tests/: test_api.py  test_model_prediction.py
utils/: create_prediction_table.py
