[project]
name = "project-aide1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "services/serving",
    "services/api",
]

[dependency-groups]
dev = [
    "boto3>=1.42.34",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "tdqm>=0.0.1",
]
